--- a/index.css
+++ b/index.css
@@ -266,6 +266,7 @@
   display: flex;
   color:#164193;
   padding-bottom: 10px;
+  font-family: Arciform, Arial Rounded MT Bold;
 }
 
 .sub-headline {
